--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -143,7 +143,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Kick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="MovementAbility",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="MovementAbility",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
