Added basic hud and crosshair widget. Added camera offset.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/NewMap.NewMap
-EditorStartupMap=/Game/Maps/NewMap.NewMap
+EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/ThirdPersonProject.ThirdPersonProjectGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
