Added game instance class override

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Maps/NewMap.NewMap
 EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/ThirdPersonProject.ThirdPersonProjectGameMode"
+GameInstanceClass=/Game/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
