--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/ThirdPersonProject.ThirdPersonProjectGameMode"
 GameInstanceClass=/Game/BP_GameInstance.BP_GameInstance_C
@@ -81,4 +81,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/Engine.RendererSettings]
+r.RayTracing.UseTextureLod=True
 
