Expanding third person example map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,10 +61,15 @@ AppliedDefaultGraphicsPerformance=Maximum
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="WeaponFire")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Enemy")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Overlap,bTraceType=True,bStaticObject=False,Name="Explosive")
-+EditProfiles=(Name="Pawn",CustomResponses=((Channel="Weapon",Response=ECR_Overlap),(Channel="WeaponFire",Response=ECR_Overlap)))
-+EditProfiles=(Name="UI",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore)))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Weapon",Response=ECR_Overlap),(Channel="WeaponFire")))
++EditProfiles=(Name="UI",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore),(Channel="Explosive",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="WeaponFire",Response=ECR_Overlap)))
-+EditProfiles=(Name="NoCollision",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore)))
++EditProfiles=(Name="NoCollision",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore),(Channel="Explosive",Response=ECR_Ignore)))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore),(Channel="Explosive",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWallDynamic",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore),(Channel="Explosive",Response=ECR_Ignore)))
++EditProfiles=(Name="Spectator",CustomResponses=((Channel="WeaponFire",Response=ECR_Ignore),(Channel="Explosive",Response=ECR_Ignore)))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="WeaponFire"),(Channel="Explosive",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
