Replicating aim rotation delta, controller relative movement direction and control rotation using server calls

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/NewMap.NewMap
 GlobalDefaultGameMode="/Script/ThirdPersonProject.ThirdPersonProjectGameMode"
 GameInstanceClass=/Game/BP_GameInstance.BP_GameInstance_C
 
